5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1649_2704.log
== SUBMITION (2019-04-11 18:39:16) 
-- CODE:
nota=float(input("digite a nota"))
acrescimo=10/100*nota
if (mensagem.upper()="S"):
	resposta=nota+acrescimo
else:
	resposta=nota
print(resposta)
-- EXECUTION TIME:
0.137656
-- ERROR:
  File "/home/codebench/codes/1649/2704/main.py", line 3
    if (mensagem.upper()="S"):
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:39:25) 
-- CODE:
nota=float(input("digite a nota"))
acrescimo=10/100*nota
if (mensagem.upper()=="S"):
	resposta=nota+acrescimo
else:
	resposta=nota
print(resposta)
-- EXECUTION TIME:
0.162429
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2704/main.py", line 3, in <module>
    if (mensagem.upper()=="S"):
NameError: name 'mensagem' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:39:28) 
-- CODE:
nota=float(input("digite a nota"))
acrescimo=10/100*nota
if (mensagem.upper()=="S"):
	resposta=nota+acrescimo
else:
	resposta=nota
print(resposta)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (mensagem.upper()=="S"):
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:40:13) 
-- CODE:
nota=float(input("digite a nota"))
mensagem=input("mensagem")
acrescimo=10/100*nota
if (mensagem.upper()=="S"):
	resposta=nota+acrescimo
else:
	resposta=nota
print(resposta)
-- EXECUTION TIME:
0.145655
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
digite a notamensagem9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
digite a notamensagem4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:40:35) 
-- CODE:
nota=float(input("digite a nota"))
mensagem=input("mensagem")
acrescimo=10/100*nota
if (mensagem.upper()=="S"):
	resposta=nota+acrescimo
else:
	resposta=nota
print(resposta)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:40:54) 
-- CODE:
nota=float(input("digite a nota"))
mensagem=input("mensagem")
acrescimo=10/100*nota
if (mensagem.upper()=="S"):
	resposta=nota+acrescimo
else:
	resposta=nota
print(resposta)
-- EXECUTION TIME:
0.142533
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
